# document-refinery

./: .env.example  .gitignore  DELIVERABLES.md  DOMAIN_NOTES.md  Dockerfile  FINAL_REPORT_DRAFT.md  README.md  RUBRIC_EVIDENCE.md  pyproject.toml  streamlit_app.py
.refinery/: extraction_ledger.jsonl  pageindex_uplift_report.json  table_metrics.json
.refinery/chunks/: 0c3371dd570d0543.json  0d7dc20e73a60ed0.json  310d266b5a9af9cc.json  ce5e10367a162243.json  d0dc1fb7a04826f6.json  f0d524070ec1d31f.json
.refinery/extracted/: 0c3371dd570d0543.json  0d7dc20e73a60ed0.json  310d266b5a9af9cc.json  617d533ab560930a.json  ce5e10367a162243.json  d0dc1fb7a04826f6.json  f0d524070ec1d31f.json  fa78977dcf97efbd.json
.refinery/pageindex/: 0558b17302f2a960.json  075cf6b24a8ea01d.json  0a7cc990343752ef.json  0b48a8a744f9a98d.json  0c3371dd570d0543.json  0d7dc20e73a60ed0.json  1d8fd505c978cb58.json  257640fdde44fd3d.json  29a8f7cfc6c84209.json  2c98086e2501d2fb.json  310d266b5a9af9cc.json  341412180b1abdda.json  (+34 more)
artifacts/: pageindex_eval_queries.json  qa_examples.json  table_gold_labels.json
document_refinery.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
rubric/: extraction_rules.yaml  vision_strategy.yaml
scripts/: build_qa_examples_from_history.py  eval_pageindex_uplift.py  eval_table_metrics.py
src/: cli.py  config.py  pipeline.py
tests/: test_budget_caps.py  test_chunking_rules.py  test_confidence.py  test_config.py  test_layout_adapter.py  test_orchestrator.py  test_pageindex_precision.py  test_provenance.py  test_triage.py  test_vision_budget.py
(+108 files in other folders)
