[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "document-refinery"
version = "0.1.0"
description = "Document Intelligence Refinery: multi-stage agentic pipeline for document extraction"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.7.0",
  "PyYAML>=6.0.1",
  "pypdf>=4.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[project.scripts]
refinery = "src.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-dir]
src = "src"